tests/src/type-error/application.stau
f :: Int -> Int
f x = x * 3

main = f True

